Updates readme intro

--- a/src/templates/layouts/default.html
+++ b/src/templates/layouts/default.html
@@ -20,7 +20,7 @@
             <div class="header" role="banner">
                 <div class="o-wrapper">
                     <div class="header__hdr">
-                        <h1 class="hdg hdg_1 hdg_lh1">RxSentry</h1>
+                        <h1 class="hdg hdg_1 hdg_lh1">Common Objects</h1>
                     </div>
                     <div class="header__nav">
                         <div class="mainNav" data-ui-component="MainNav">
